<resources>
    <string name="app_name">V2EX++</string>

    <string name="str_home">Home</string>
    <string name="str_node">Node</string>
    <string name="str_me">Me</string>

    <!-- category -->
    <string name="str_tech">tech</string>
    <string name="str_creative">creative</string>
    <string name="str_play">play</string>
    <string name="str_apple">apple</string>
    <string name="str_jobs">jobs</string>
    <string name="str_deals">deals</string>
    <string name="str_city">city</string>
    <string name="str_qna">qna</string>
    <string name="str_hot">hot</string>
    <string name="str_all">all</string>
    <string name="str_r2">r2</string>

    <string name="str_right_arrow">"›"</string>
    <string name="str_dot">"•"</string>
    <string name="str_click_rate">rate</string>

    <string name="title_postscript">Postscripts %d</string>
    <string name="str_al_reply">All reply: %d</string>

    <string name="str_option_addtofav">Add fav</string>
    <string name="str_option_sharetowechat">Share</string>
    <string name="str_option_ignore">Ignore</string>
    <string name="str_option_thank">Thank</string>

    <string name="str_default_name">unknow</string>
    <string name="str_gold">Gold %d</string>
    <string name="str_remind">%d Remind</string>

    <string name="str_node_collect">Node fav</string>
    <string name="str_topic_collect">Topic fav</string>
    <string name="str_attention">Attention</string>
    <string name="str_settings">Settings</string>
    <string name="str_about">About</string>
    <string name="str_update">Update</string>

    <string name="str_author">
        Author:\tgoodlg\n\nEmail:\tngyzqf@163.com
    </string>
    <string name="str_version">Version: %s</string>

    <string name="str_username">UserName</string>
    <string name="str_passwd">Passwd</string>
    <string name="str_signin">Sign in</string>
    <string name="str_forget">Forget?</string>
    <string name="str_no_accout">No account?</string>
    <string name="str_signup">Sign up</string>
    <string name="str_no_signin">No sign in</string>

    <string name="toast_please_wait">Please wait...</string>
    <string name="title_activity_loading">Loading</string>

    <string name="error_incorrect_password">Login failed!</string>
    <string name="toast_login_success">Welcome back, %s!</string>
    <string name="error_field_required">This field is required</string>
    <string name="toast_has_sign_out">Account has sign out!</string>

    <string name="toast_parse_failed">Parse failed!</string>
    <string name="toast_access_denied">Access denied, please try later!</string>
    <string name="toast_topic_not_found">Topic not found!</string>

    <string name="node_summary">The description of node</string>
    <string name="str_nodes_topics_count">%d Topics</string>
    <string name="menu_title_search">Search</string>
    <string name="search_nodes_hint">Search node</string>
    <string name="str_floor">#</string>

    <string name="str_node_grid_title">my favorite node</string>

</resources>
