<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator2_height"
        android:background="@color/colorLineBg_separator"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/all_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_marginLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/str_al_reply"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_toStartOf="@+id/thank"
        android:layout_toLeftOf="@+id/thank"
        android:padding="1dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/str_option_ignore"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/thank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:padding="1dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_background"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/str_option_thank"
        android:textSize="12sp" />
</RelativeLayout>