<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLineBg_separator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_down"
        android:paddingBottom="8dp">

        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height_1"
            android:background="@drawable/divider"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/addToFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line5"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/str_option_addtofav"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/shareToWechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line5"
            android:layout_toEndOf="@id/addToFav"
            android:layout_toRightOf="@id/addToFav"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="7dp"
            android:text="@string/str_option_sharetowechat"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/ignore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line5"
            android:layout_toEndOf="@id/shareToWechat"
            android:layout_toRightOf="@id/shareToWechat"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="7dp"
            android:text="@string/str_option_ignore"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/thank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line5"
            android:layout_toEndOf="@id/ignore"
            android:layout_toRightOf="@id/ignore"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="7dp"
            android:text="@string/str_option_thank"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>